--- a/app/templates/tags/selectTag.html
+++ b/app/templates/tags/selectTag.html
@@ -3,7 +3,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}
-Event Frame Templates
+Data Entry - Tags
 {% endblock %}
 
 {% block page_content %}
