--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -67,6 +67,9 @@
                         <li><a href = "{{ url_for("tags.selectTag") }}">Tags</a></li>
                     </ul>
                 </li>
+                {% if config["IS_RASPBERRY_PI"] %}
+                    <li><a href = "/grafana" target = "_blank">Reports</a></li>
+                {% endif %}
             </ul>
             {% endif %}
             <ul class = "nav navbar-nav navbar-right">
