--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,7 +33,7 @@
                             <li><a href = "{{ url_for("tags.listTags") }}">Tags</a></li>
                                 <li><a href = "{{ url_for("tags.importTags") }}">Import</a></li>
                                 <li><a href = "{{ url_for("tags.exportTags") }}">Export</a></li>
-                                <li><a href = "{{ url_for("unitOfMeasurements.listUnitOfMeasurements") }}">Units</span></a></li>
+                                <li><a href = "{{ url_for("unitOfMeasurements.listUnitOfMeasurements") }}">Units</a></li>
                         </ul>
                     </li>
                     <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Templates <span class="caret"></span></a>
