--- a/app/templates/eventFrames/eventFrames.html
+++ b/app/templates/eventFrames/eventFrames.html
@@ -51,8 +51,10 @@ Event Frames
     <h1>{{ element.Name }}</h1>
     {% if parentEventFrame %}
         {% set url = url_for("eventFrames.addEventFrame", parentEventFrameId = parentEventFrame.EventFrameId) %}
+        <h2>{{ parentEventFrame.EventFrameTemplate.Name }} {{ parentEventFrame.friendlyName() }} Child Event Frames</h2>
     {% else %}
         {% set url = url_for("eventFrames.addEventFrame", elementId = element.ElementId, eventFrameTemplateId = eventFrameTemplate.EventFrameTemplateId) %}
+        <h2>Event Frames</h2>
     {% endif %}
     <a class = "btn btn-default" title = "Add" href = "{{ url }}" role = "button"><span class="glyphicon glyphicon-plus"></a>
     <br><br>
@@ -67,20 +69,14 @@ Event Frames
                 <th></th>
                 <th></th>
                 <th></th>
-                <th></th>
             </tr>
         </thead>
         <tbody>
             {% for eventFrame in eventFrames %}
                 <tr>
-                    {% if eventFrame.EventFrameTemplate.EventFrameTemplates %}
-                        <td><a class = "btn btn-default" title = "Child Event Frames"
-                            href = "{{ url_for("eventFrames.listEventFrames", parentEventFrameId = eventFrame.EventFrameId) }}">
-                            <span class="glyphicon glyphicon-list"></span>
-                            </a></td>
-                    {% else %}
-                        <td></td>
-                    {% endif %}
+                    <td><a class = "btn btn-default" title = "Child Event Frames"
+                        href = "{{ url_for("eventFrames.listEventFrames", parentEventFrameId = eventFrame.EventFrameId) }}">
+                        <span class="glyphicon glyphicon-list"></span></a></td>
                     <td>{{ eventFrame.EventFrameTemplate.Name }}</td>
                     <td>{{ eventFrame.Name }}</td>
                     <td>{{ eventFrame.StartTimestamp }}</td>
@@ -95,9 +91,6 @@ Event Frames
                     {% else %}
                         <td></td>
                     {% endif %}
-                    <td><a class = "btn btn-default" title = "Notes" href = "{{ url_for("eventFrames.listEventFrameNotes", 
-                        elementId = element.ElementId, eventFrameTemplateId = eventFrame.EventFrameTemplate.EventFrameTemplateId, 
-                        eventFrameId = eventFrame.EventFrameId) }}"><span class="glyphicon glyphicon-comment"></a></td>
                     <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("eventFrames.editEventFrame",
                         eventFrameId = eventFrame.EventFrameId) }}"><span class="glyphicon glyphicon-edit"></a></td>
                     <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("eventFrames.deleteEventFrame",
@@ -106,6 +99,34 @@ Event Frames
             {% endfor %}
         </tbody>
     </table>
+    {% if parentEventFrame.EventFrameNotes %}
+    <h2>{{ parentEventFrame.EventFrameTemplate.Name }} {{ parentEventFrame.friendlyName() }} Notes</h2>
+    <a class = "btn btn-default" title = "Add" href = "{{ url_for("eventFrames.addEventFrameNote",
+        eventFrameId = parentEventFrame.EventFrameId) }}" role = "button"><span class="glyphicon glyphicon-plus"></span></a>
+    <br><br>
+    <table id = "eventFrameNotesTable" class = "table">
+        <thead>
+            <tr>
+                <th>Timestamp</th>
+                <th>Note</th>
+                <th></th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for eventFrameNote in parentEventFrame.EventFrameNotes %}
+                <tr>
+                    <td>{{ eventFrameNote.Note.Timestamp }}</td>
+                    <td>{{ eventFrameNote.Note.Note }}</td>
+                    <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("eventFrames.editEventFrameNote",
+                        noteId = eventFrameNote.NoteId) }}"><span class="glyphicon glyphicon-edit"></span></a></td>
+                    <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("eventFrames.deleteEventFrameNote",
+                        noteId = eventFrameNote.NoteId, eventFrameId = eventFrameNote.EventFrameId) }}"><span class="glyphicon glyphicon-trash"></span></a></td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    {% endif %}
 </div>
 {% endblock %}
 
@@ -128,9 +149,26 @@ Event Frames
                 null,
                 null,
                 { "orderable": false }, // Stop event frame button.
-                { "orderable": false }, // List event frame notes button.
                 { "orderable": false }, // Edit event frame button.
                 { "orderable": false }  // Delete event frame button.
+            ],
+            "stateSave": true,
+            "stateDuration": 0,
+            "pageLength": 25
+        });
+
+        $('#eventFrameNotesTable').DataTable
+        ({
+            "order":
+            [
+                [0, 'desc']              // Timestamp.
+            ],
+            "columns":
+            [
+                null,
+                null,
+                { "orderable": false }, // Edit tag value button.
+                { "orderable": false }  // Delete tag value button.
             ],
             "stateSave": true,
             "stateDuration": 0,
