--- a/app/templates/tagValues/tagValues.html
+++ b/app/templates/tagValues/tagValues.html
@@ -56,8 +56,13 @@ Tag Values
                     {% endif %}
                     <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("tagValues.editTagValue", tagValueId = tagValue.TagValueId) }}">
                         <span class="glyphicon glyphicon-edit"></span></a></td>
-                    <td><a class = "btn btn-default" title = "Note" href = "{{ url_for("tagValues.listTagValueNotes", tagValueId = tagValue.TagValueId) }}">
-                        <span class="glyphicon glyphicon-comment"></span></a></td>
+                    {% if elementAttribute %}
+                        <td><a class = "btn btn-default" title = "Note" href = "{{ url_for("tagValues.listTagValueNotes", tagValueId = tagValue.TagValueId,
+                            elementAttributeId = elementAttribute.ElementAttributeId) }}"><span class="glyphicon glyphicon-comment"></span></a></td>
+                    {% else %}
+                        <td><a class = "btn btn-default" title = "Note" href = "{{ url_for("tagValues.listTagValueNotes", tagValueId = tagValue.TagValueId) }}">
+                            <span class="glyphicon glyphicon-comment"></span></a></td>
+                    {% endif %}
                     <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("tagValues.deleteTagValue", tagValueId = tagValue.TagValueId) }}">
                         <span class="glyphicon glyphicon-trash"></span></a></td>
                 </tr>
